# Homework_2_10

Homework_2_10_1/: CMakeLists.txt  my_first_cmake_program.cpp
Homework_2_10_2/: CMakeLists.txt  equilateralTriangle.cpp  equilateralTriangle.h  figure.cpp  figure.h  isoscelesTriangle.cpp  isoscelesTriangle.h  main.cpp  parallelogram.cpp  parallelogram.h  quadriangle.cpp  quadriangle.h  rectangel.cpp  rectangle.h  rhombus.cpp  rhombus.h  rightTriangle.cpp  rightTriangle.h  square.cpp  square.h  triangle.cpp  triangle.h
